--- a/MrRobot/MrRobot.csproj
+++ b/MrRobot/MrRobot.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLASS.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="MainController.cs" />
     <Compile Include="MainView.cs" />
